# server/internal/app/families.go
@@ -4,12 +4,14 @@ import (
 	"context"
 	"database/sql"
 	"errors"
+	"time"
 
 	"github.com/danielgtaylor/huma/v2"
 	"github.com/google/uuid"
 	"github.com/ian-shakespeare/tribe-tracker/server/internal/database"
 	"github.com/ian-shakespeare/tribe-tracker/server/internal/models"
-	"github.com/lib/pq"
+	"modernc.org/sqlite"
+	"modernc.org/sqlite/lib"
 )
 
 type CreateFamilyRequest struct {
@@ -31,14 +33,16 @@ func (a *App) CreateFamily(ctx context.Context, req *CreateFamilyRequest) (*Crea
 		return nil, huma.Error400BadRequest("Name must be less than 64 characters.")
 	}
 
+	userId := ctxToUserId(ctx)
 	family, err := a.db.CreateFamily(ctx, database.CreateFamilyParams{
-		UserUuid: ctxToUserId(ctx),
-		Name:     req.Body.Name,
+		FamilyUuid: uuid.New(),
+		UserUuid:   userId,
+		Name:       req.Body.Name,
 	})
 	if err != nil {
-		pqErr := new(pq.Error)
-		if errors.As(err, &pqErr) {
-			if pqErr.Code.Name() == "foreign_key_violation" {
+		sqlErr := new(sqlite.Error)
+		if errors.As(err, &sqlErr) {
+			if sqlErr.Code() == sqlite3.SQLITE_CONSTRAINT_FOREIGNKEY {
 				return nil, huma.Error404NotFound("User not found.")
 			}
 		}
@@ -49,9 +53,9 @@ func (a *App) CreateFamily(ctx context.Context, req *CreateFamilyRequest) (*Crea
 	var res CreateFamilyResponse
 	res.Body.ID = family.FamilyUuid.String()
 	res.Body.Name = family.Name
-	res.Body.CreatedBy = family.UserUuid.String()
-	res.Body.CreatedAt = family.CreatedAt
-	res.Body.UpdatedAt = family.UpdatedAt
+	res.Body.CreatedBy = userId.String()
+	res.Body.CreatedAt = time.Unix(family.CreatedAt, 0)
+	res.Body.UpdatedAt = time.Unix(family.UpdatedAt, 0)
 
 	return &res, nil
 }
@@ -70,8 +74,9 @@ func (a *App) CreateFamilyMember(ctx context.Context, req *CreateFamilyMemberReq
 		return nil, huma.Error400BadRequest("Invalid family ID.")
 	}
 
+	userId := ctxToUserId(ctx)
 	familyMember, err := a.db.CreateFamilyMember(ctx, database.CreateFamilyMemberParams{
-		UserUuid:   ctxToUserId(ctx),
+		UserUuid:   userId,
 		FamilyUuid: familyId,
 	})
 	if err != nil {
@@ -79,13 +84,13 @@ func (a *App) CreateFamilyMember(ctx context.Context, req *CreateFamilyMemberReq
 			return nil, huma.Error404NotFound("Family not found.")
 		}
 
-		return nil, huma.Error500InternalServerError("Failed to create family member record." + err.Error())
+		return nil, huma.Error500InternalServerError("Failed to create family member record.")
 	}
 
 	var res CreateFamilyMemberResponse
-	res.Body.User = familyMember.UserUuid.String()
-	res.Body.Family = familyMember.FamilyUuid.String()
-	res.Body.CreatedAt = familyMember.CreatedAt
+	res.Body.User = userId.String()
+	res.Body.Family = familyId.String()
+	res.Body.CreatedAt = time.Unix(familyMember.CreatedAt, 0)
 
 	return &res, nil
 }
