# server/internal/app/locations.go
@@ -2,17 +2,18 @@ package app
 
 import (
 	"context"
-	"encoding/json"
+	"time"
 
 	"github.com/danielgtaylor/huma/v2"
+	"github.com/google/uuid"
 	"github.com/ian-shakespeare/tribe-tracker/server/internal/database"
 	"github.com/ian-shakespeare/tribe-tracker/server/internal/models"
 )
 
 type CreateLocationRequest struct {
 	Body struct {
-		Lat float32 `json:"lat"`
-		Lon float32 `json:"lon"`
+		Lat float64 `json:"lat"`
+		Lon float64 `json:"lon"`
 	}
 }
 
@@ -21,23 +22,24 @@ type CreateLocationResponse struct {
 }
 
 func (a *App) CreateLocation(ctx context.Context, req *CreateLocationRequest) (*CreateLocationResponse, error) {
+	userId := ctxToUserId(ctx)
+
 	created, err := a.db.CreateLocation(ctx, database.CreateLocationParams{
-		UserUuid: ctxToUserId(ctx),
-		Lat:      req.Body.Lat,
-		Lon:      req.Body.Lon,
+		LocationUuid: uuid.New(),
+		UserUuid:     userId,
+		Lat:          req.Body.Lat,
+		Lon:          req.Body.Lon,
 	})
 	if err != nil {
-		return nil, huma.Error500InternalServerError("Failed to create location record." + err.Error())
+		return nil, huma.Error500InternalServerError("Failed to create location record.")
 	}
 
 	var res CreateLocationResponse
 	res.Body.ID = created.LocationUuid.String()
-	res.Body.User = created.UserUuid.String()
-	res.Body.CreatedAt = created.CreatedAt
-
-	if err := json.Unmarshal(created.Coordinates, &res.Body.Coordinates); err != nil {
-		return nil, huma.Error500InternalServerError("Created invalid coordinates.")
-	}
+	res.Body.User = userId.String()
+	res.Body.CreatedAt = time.Unix(created.CreatedAt, 0)
+	res.Body.Lat = created.Lat
+	res.Body.Lon = created.Lon
 
 	return &res, nil
 }
